@startuml lazy_kind

!include https://raw.githubusercontent.com/ncosta-ic/catppuccin-macchiato-plantuml-theme/main/theme.puml

hide empty members

interface Kind<F extends WitnessArity<?>, A> <<HKT Bridge>>

note "Witness implements\nWitnessArity<TypeArity.Unary>" as WitnessNote

interface LazyKind<A> extends Kind<LazyKind.Witness, A> {
  ' Witness implements WitnessArity<TypeArity.Unary>
}

class Lazy<A> implements LazyKind<A>{
  ' Actual Lazy Implementation
}


class LazyKindHelper {
+ {static} Kind<LazyKind.Witness, A> widen(@NonNull Lazy<A>)
+ {static} @NonNull Lazy<A> narrow(@Nullable Kind<LazyKind.Witness, A>)
' Other factory/helper methods...
}

class LazyHolder<A> implements LazyKind<A> {
- @NonNull Lazy<A> lazyInstance
}

LazyKindHelper ..> LazyHolder : creates
LazyKindHelper ..> Lazy : widens to / narrows from
LazyHolder o--> Lazy : holds

@enduml